# clown-crm

./: .env  .env.example  .gitignore  README.en.md  README.md  README.pt-BR.md  docker-compose.yml  go.mod  go.sum
cmd/api/: main.go
hacks/: user.http
internal/domain/: activity.go  call_log.go  chat.go  company.go  contact.go  deal.go  errors.go  notification.go  task.go  user.go  user_test.go
internal/http/: routers.go
internal/repository/: activity_impl.go  contracts.go  (+12 more)
sql/: 001_companies.sql  001_create_users.sql  002_contacts.sql  003_pipeline_stages.sql  004_deals.sql  005_tasks.sql  006_activities.sql  007_notes.sql  008_call_logs.sql  009_notifications.sql  010_tags.sql  011_user_extensions.sql
view/: ANTES_DEPOIS.md  Cargo.toml  Dioxus.toml  GUIA_RAPIDO.md  IMPLEMENTACAO_COMPLETA.md  PALETAS.md  RESUMO_MELHORIAS.md  UI_UX_IMPROVEMENTS.md
view/src/: main.rs  router.rs
view/src/components/: mod.rs  theme_selector.rs
view/src/components/chat/: chat_header.rs  chat_list_item.rs  message_bubble.rs  message_input.rs  mod.rs
view/src/components/common/: app_layout.rs  data_table.rs  filter_panel.rs  icon.rs  mod.rs  search_bar.rs
view/src/components/crm/: contact_card.rs  deal_card.rs  pipeline_board.rs
view/src/components/navigation/: mod.rs  sidebar.rs
view/src/components/notifications/: mod.rs
view/src/hooks/: auth_context.rs  mod.rs
view/src/models/: auth.rs  chat.rs  mod.rs  user.rs
view/src/pages/: login.rs  register.rs  showcase.rs
view/src/styles/: colors.rs  mod.rs  theme.rs
view/src/utils/: api_client.rs  mod.rs  storage.rs
(+23 files in other folders)
